Avoid background flicker in Safari

--- a/assets/static/css/global.css
+++ b/assets/static/css/global.css
@@ -8,3 +8,7 @@ body > div:first-child,
 #__next > div {
     height: 100%;
 }
+
+.page {
+    background: url(/static/images/eat-bg.jpg) no-repeat center center fixed;
+}
